@@ -3,6 +3,7 @@
 	* Added %uuid, %hostName, %hostAddress, %systemProperty, and %systemEnviron layout patterns.
 	* Added support for the handling of event messages larger than 256k.  Thanks to @fs-aikito and @alexvanacker.
 	* Fixed event race conditions by adding copyEvents setting (default true).  Thanks to @fs-aikito. 
+	* Added printRejectedEvents config setting for sending failed events to stderr.
 	* Fleshed out the unit tests.
 
 1.11: 1/20/2018
